--- a/account_es.properties
+++ b/account_es.properties
@@ -19,7 +19,7 @@ account.autoreplenishment.pagename=Autoreplenishment
 account.addresslist.pagename=Address Book
 account.paymentinstrument.pagename=Payment Methods
 account.wishlist.search.pagename=Wishlists Search Results
-account.resetpassword.pagename=Request to Reset Password
+account.resetpassword.pagename=Solicitar Nueva Contrasena
 account.sendtofriend.redirecturls=Wishlist-Show|Wishlist-Favorites|Product-Show
 paymentinstrumentlist.deletesubscription=Your subscription could not be deleted, please contact customer support.
 account.subscription=Your subscription could not be created. Please check your card details.
