--- a/account_es.properties
+++ b/account_es.properties
@@ -24,7 +24,7 @@ account.sendtofriend.redirecturls=Wishlist-Show|Wishlist-Favorites|Product-Show
 paymentinstrumentlist.deletesubscription=Your subscription could not be deleted, please contact customer support.
 account.subscription=Your subscription could not be created. Please check your card details.
 account.loyalty.digitalrewards=Digital rewards
-account.loyalty.youare=you are a
+account.loyalty.youare=Tu eres un
 account.loyalty.wingsmember={0} Wings Member
 account.loyalty.congratulations=Congratulations
 account.loyalty.rewardisnowavailable=Your reward is now available!
