Traduccion de Documento viernes 11 de Agosto

--- a/account_es.properties
+++ b/account_es.properties
@@ -59,20 +59,20 @@ account.referral.twittershare.title=
 account.referral.twittershare.description=
 account.referral.twittershare.message=
 account.referral.socialsharebutton=Post to {0}
-account.referral.sendemail=Send an email
+account.referral.sendemail=Enviar Email
 account.referral.description=Vestibulum laoreet odio et porta tempus. Aenean sollicitudin tempor dui et consequat. Integer eget blandit odio. Donec et lacus posuere, dictum justo ut.
 account.referral.sendemailpopup.text=Your referral code was successfully sent
 account.referral.separatewithcoma=Separate multiple email adresses with a comma.
 account.referral.emailmissing=Please enter valid emails
 account.referral.emailaddresses=Email addresses
 account.referral.emailexample.title=We entered a message for you, but feel free to write your own.
-account.referral.emailexample=Example
+account.referral.emailexample=Ejemplo
 account.referral.sendinvites=Send inviteautoreplenishment.order.cancel.title=Cancel Auto Replenishment Delivery
 autoreplenishment.order.cancel.body=Are you sure you want to cancel your auto replenishment delivery?
 autoreplenish.mysubscriptions.shortDesc=
 autoreplenish.subscription.cancel=Cancel Subscription
 autoreplenish.subscription.cancel.body=Are you sure you want to cancel your subscription?
-autoreplenish.invalid.card=Invalid Credit Card
+autoreplenish.invalid.card=Tarjeta de Credito Invalida
 autoreplenish.payment.error=Payment error
 autoreplenish.canceled.subscription=Canceled subscription
 autoreplenish.tech.error=Technical Error
