Trabajo de Traductor 2

--- a/account_es.properties
+++ b/account_es.properties
@@ -25,10 +25,10 @@ paymentinstrumentlist.deletesubscription=Your subscription could not be deleted,
 account.subscription=Your subscription could not be created. Please check your card details.
 account.loyalty.digitalrewards=Digital rewards
 account.loyalty.youare=Tu eres un
-account.loyalty.wingsmember={0} Wings Member
-account.loyalty.congratulations=Congratulations
+account.loyalty.wingsmember={0} Miembro de Alas
+account.loyalty.congratulations=Felicitaciones
 account.loyalty.rewardisnowavailable=Your reward is now available!
-account.loyalty.viewrewards.button=View rewards
+account.loyalty.viewrewards.button=Ver Premios
 account.loyalty.viewrewards=View rewards
 account.loyalty.spendtoearn=Spend {0} to earn your next reward.
 account.loyalty.yourvoucherexpire=Your {0} voucher will expire on {1}.
