trabajo de traduccion del viernes

--- a/account_es.properties
+++ b/account_es.properties
@@ -10,8 +10,8 @@ orderstatus.tracking.label=Tracking Number:
 findorder.title=Check Order
 passwordreset.captchafailed=Failed to pass captcha
 passwordreset.wrongpassword=Wrong current password.
-setnewpasswordconfirm.head.title=Set New Password confirm
-passwordresetdialog.title=Reset Password
+setnewpasswordconfirm.head.title=Pon un nuevo password
+passwordresetdialog.title=Restablecer contrasena
 minicard.billingaddress=Billing Address
 wishlist.addallproducts.error=Some products couldn't be added to the cart.
 #account.avatar.default=
