--- a/account_es.properties
+++ b/account_es.properties
@@ -12,7 +12,7 @@ passwordreset.captchafailed=Failed to pass captcha
 passwordreset.wrongpassword=Wrong current password.
 setnewpasswordconfirm.head.title=Pon un nuevo password
 passwordresetdialog.title=Restablecer contrasena
-minicard.billingaddress=Billing Address
+minicard.billingaddress=Direccion
 wishlist.addallproducts.error=Some products couldn't be added to the cart.
 #account.avatar.default=
 account.autoreplenishment.pagename=Autoreplenishment
