Viernes 18 de Agosto

--- a/TraduccionLacome/lancome_v3_resources_to_translate ES/account_es.properties
+++ b/TraduccionLacome/lancome_v3_resources_to_translate ES/account_es.properties
@@ -21,8 +21,8 @@ account.paymentinstrument.pagename=Métodos de pago
 account.wishlist.search.pagename=Resultados de búsqueda de Favoritos
 account.resetpassword.pagename=Solicitud de restablecimiento de contraseña
 account.sendtofriend.redirecturls=Favoritos-Mostrar|Favoritos-Mis Favoritos|Producto-Mostrar
-paymentinstrumentlist.deletesubscription=Tu suscrpción no pudo ser cancelada, por favor contacta con soporte al cliente. please contact customer support.
-account.subscription=Tu susbscripción no pudo ser creada. Por favor revisa los detalles de tu tarjeta de crédito. 
+paymentinstrumentlist.deletesubscription=Tu suscripción no pudo ser cancelada, por favor contacta con soporte al cliente.
+account.subscription=Tu suscripción no pudo ser creada. Por favor revisa los detalles de tu tarjeta de crédito. 
 account.loyalty.digitalrewards=Premios electrónicos
 account.loyalty.youare=Tu eres una
 account.loyalty.wingsmember={0} Miembro Alas
@@ -36,12 +36,12 @@ account.loyalty.rewardisnotavailable=Tu premio no está disponible!
 account.loyalty.rewardisnotdescription=Cuando te conviertes en un miembro de premios Love Kiehl, tu compras ganan premios extras, ofertas exclusivas y regalos sorpresa. 
 account.loyalty.awayfrom=Estás a {0} de tus{1} Alas
 account.loyalty.membersince=Miembro reconocido desde {0}
-account.loyalty.dashboard.myrewards=My rewards
+account.loyalty.dashboard.myrewards=Mis premios
 account.loyalty.myactivity=Mi actividad
 account.loyalty.philantropyhearts=Corazones filantrópicos
 account.loyalty.hearts.collected=Has recaudado
 account.loyalty.hearts.philanthropyhearts=Corazones filantrópicos
-account.loyalty.hearts.communutycollected=Hasta ahora 20,617 corazones comunitarios han sido recolectados este año para el clubo de niños y niñas de Estados Unidos.
+account.loyalty.hearts.communutycollected=Hasta ahora 20,617 corazones comunitarios han sido recolectados este año para el club de niños y niñas de Estados Unidos.
 account.loyalty.recycleberewarded=Recicla y sé recompensado.
 account.loyalty.recycle.youhavecollected=Haz juntado
 account.loyalty.recycle.recyclestamps=Recicla estampas.
@@ -62,18 +62,18 @@ account.referral.socialsharebutton=Publicar en {0}
 account.referral.sendemail=Envía un correo electrónico
 account.referral.description=Vestibulum laoreet odio et porta tempus. Aenean sollicitudin tempor dui et consequat. Integer eget blandit odio. Donec et lacus posuere, dictum justo ut.
 account.referral.sendemailpopup.text=Tú codigo de referencia fué enviado exitosamente.
-account.referral.separatewithcoma=Separa las direcciones de correos multiples con comas.
+account.referral.separatewithcoma=Separa las direcciones de correos electrónios múltiples con comas.
 account.referral.emailmissing=Por favor ingresa direcciones de correos electrónicos válidos
 account.referral.emailaddresses=Direcciones de correos electrónicos
-account.referral.emailexample.title=Escribimos un mensaje por ti, sientete en la libertad de cambiarlo. We entered a message for you, but feel free to write your own.
+account.referral.emailexample.title=Escribimos un mensaje por ti, sientete en la libertad de cambiarlo.
 account.referral.emailexample=Ejemplo
-account.referral.sendinvites=Send inviteautoreplenishment.order.cancel.title=Cancelar entrega de reposición autimática.
+account.referral.sendinvites=Send inviteautoreplenishment.order.cancel.title=Cancelar entrega de reposición automática.
 autoreplenishment.order.cancel.body=¿Estás seguro de cancelar la entrega de reposición automática? 
 autoreplenish.mysubscriptions.shortDesc=
 autoreplenish.subscription.cancel=Cancelar suscripción
 autoreplenish.subscription.cancel.body=¿Estás seguro de cancelar la suscripción?
-autoreplenish.invalid.card=ITarjeta de crédito inválida
+autoreplenish.invalid.card=Tarjeta de crédito inválida
 autoreplenish.payment.error=Error de pago
 autoreplenish.canceled.subscription=Suscripción cancelada
-autoreplenish.tech.error=Error Tpecnico
+autoreplenish.tech.error=Error Técnico
 manage.autoreplenishment.title=
