--- a/TraduccionLacome/lancome_v3_resources_to_translate ES/checkout_es.properties
+++ b/TraduccionLacome/lancome_v3_resources_to_translate ES/checkout_es.properties
@@ -4,22 +4,22 @@ popin.samplesmessages={0} muestras gratis
 minicart.purchase=Ir a mi carrito de compras
 addedtocart.quantity=QTY. {0} -
 cart.empty.header=Tu carrito de compras <span>está vacio</span>
-cart.mybag.label=My Bag
+cart.mybag.label=Mis compras
 cart.recommendation.bestsellers=Mejores vendidos
 cart.recommendation.newin=Novedades
 cart.recommendation.toprated=Mejores calificados
-cart.backtoshop=< Regresa a comprar
+cart.backtoshop=< Regresar a comprar
 cart.quickview=Vista rápida
 cart.recommendationsdivider=También te pudiera gustar
 checkout.section.submit.addresses=Continua con el pago y envío
 checkout.minicart.edit=Edita tu carrito
-checkout.minicart.header=tu carrito de compras
-checkout.section.login.title=1. checkout method
+checkout.minicart.header=Tu carrito de compras
+checkout.section.login.title=1. Método de pago
 checkout.section.login.completed.title=1. Método de pago
-checkout.section.samples.title=2. selecciona tus MUESTRAS
+checkout.section.samples.title=2. Selecciona tus MUESTRAS
 checkout.section.addresses.title=3. Datos de contacto
 checkout.section.delivery.title=Entrega
-checkout.section.payment.title=4. pago y envío
+checkout.section.payment.title=4. Pago y envío
 checkout.section.preview.title=5. Revisa tu pedido
 checkout.section.shippingandadresses.title=Direcciones
 checkout.section.paymentandreview.title=Paga y realiza tu pedido
@@ -35,7 +35,7 @@ checkout.module.emailonly.description=Completa tu orden sin una cuenta
 checkout.module.registration.title=Nuevos Miembros
 checkout.module.registration.subtitle=Crear una cuenta para obtener privilegios exclusivos
 checkout.module.signin.delimiter=O
-checkout.module.sociallogin.title=Inicia sesión en un CLICK
+checkout.module.sociallogin.title=Inicia sesión en un CLIC
 checkout.module.sociallogin.description=Sin contraseñas adicionales para recordar
 confirmationpage.createaccount.button=Crea tu cuenta
 confirmationpage.ordersummary.subtitle=Resumen de pedidos
@@ -48,14 +48,14 @@ confirmationpage.minicart.header=Tu carrito de compras
 confirmationpage.createaccount.title=Recibe privilegios exclusivos
 confirmationpage.createaccount.message=
 checkout.estimate.delivery=Tu pedido será entregado en {0}
-checkout.cartqty=Qty : {0}
+checkout.cartqty=Cant. : {0}
 checkout.cartfree=Gratis
 checkout.yourgifts=Tus regalos
 checkout.yoursamples=Tus muestras
 personal.engraving.messages=Grabado personalizado
 checkout.module.emailonlycomplete.email=<span class="label">Welcome!</span>
 checkout.module.signincomplete.name=<span class="label">Welcome back, {1}!
-checkout.module.orderreview.terms=Terminos y condiciones
+checkout.module.orderreview.terms=Términos y condiciones
 checkout.section.login.completed.title=1. Método de verificación
 singleshipping.shippingmethod.withdiscount=<span class="nombre">{0}</span><span class="precio"><span class='sin_descuento'>{1}</span> - <span class='con_descuento'>{3}</span></span><div class="descripción">{2}</div>
 checkout.module.shippingmethod.title=Preferencia de envío
@@ -65,17 +65,17 @@ checkout.module.giftcertificate.title= Ingresa el código de tu certificado de r
 checkout.module.paymentmethod.title=Método de pago
 paymentmethod.mandatory.text=Campo obligatorio
 checkout.section.submit.preview=Confirmma tu pedido
-giftcertificate.error.declined=Tu certificado de regalo no pudo ser creado. Por favor revisa tu informción e intenta de nuevo. Gracias por tu paciencia.
+giftcertificate.error.declined=Tu certificado de regalo no pudo ser creado. Por favor revisa tu información e intenta de nuevo. Gracias por tu paciencia.
 minicart.subtotal.label=Sub-total
 minicart.yourcart.label=Tu Carrito
-minicart.qty.label=QTY.
+minicart.qty.label=Cant.
 minicart.price.label=Precio
 checkout.step.submit=Siguiente paso
 checkout.step.name.signin=Iniciar sesión
 checkout.step.displayname.signin=Ingresa tu nombre
 checkout.step.title.signin=Ingresa un título
 checkout.step.description.signin=Ingresa descripción
-checkout.step.submit.signin=Continuar  con la revisión de pago
+checkout.step.submit.signin=Continuar con la revisión de pago
 checkout.step.name.samples=Muestras
 checkout.step.displayname.samples=Nombre de la muestra
 checkout.step.title.samples=Título de la muestra
@@ -102,7 +102,7 @@ checkout.step.name.choosesamples=Elige muestras
 checkout.step.displayname.choosesamples=Nombre de muestras
 checkout.step.title.choosesamples=Título de muestras
 checkout.step.description.choosesamples=Descripción de muestras
-checkout.step.submit.choosesamples=COntinuar con el pago
+checkout.step.submit.choosesamples=Continuar con el pago
 checkout.step.name.shipping=Envío
 checkout.step.displayname.shipping=Nombre del envío
 checkout.step.title.shipping=Título del envío
@@ -156,7 +156,7 @@ checkout.minicart.edit=< Editar carrito de compras
 checkout.giftcert.recipient={0}, {1}
 checkout.giftcert.sender={0}
 checkout.module.signin.title=Iniciar y Cerrar sesión
-checkout.module.signin.description=Si tienes una cuenta, favor de iniciar sesión para un pago más rapido.
+checkout.module.signin.description=Si tienes una cuenta, favor de iniciar sesión para un pago más rápido.
 checkout.module.signin.label=Soy un cliente existente
 checkout.module.signin.forgotyourpassword=¿Olvidaste tu contraseña?
 checkout.module.signin.apply=Iniciar y Cerrar sesión
@@ -174,13 +174,13 @@ checkout.module.emailonly.label=Soy cliente nuevo
 checkout.module.emailonly.apply=Ir a pagos
 checkout.module.emailonly.radiodescription=(puedes crear una contraseña más tarde)
 checkout.module.emailonlycomplete.title=Cliente
-checkout.module.emailonlycomplete.email=<span class="label">Guest:</span> {0}
+checkout.module.emailonlycomplete.email=<span class="label">INVITADO:</span> {0}
 checkout.module.registration.title=Iniciar y Cerrar sesión
 checkout.module.registration.subtitle=
 checkout.module.registration.apply=Unirse ahora
 checkout.module.couponcode.title=Applicar código de promoción
-checkout.couponcode.title.applied={0} {1} {2} - Applied
-checkout.couponcode.title.rejected={0} {1} {2} - Rejected
+checkout.couponcode.title.applied={0} {1} {2} - Aplicado
+checkout.couponcode.title.rejected={0} {1} {2} - Rechazado
 checkout.couponcode.adjustment=- {0} ({1})
 checkout.couponcode.applybutton.text=Aplicar
 checkout.couponcode.removebutton.text=Remover
@@ -189,13 +189,13 @@ checkout.module.giftcertificate.title=Canjear certificados de regalo
 checkout.giftsertificate.title=Certificado de Regalo {0} ({1})
 checkout.giftsertificate.balance=El balance del certificado de regalo es <strong>{0}</strong>
 checkout.giftsertificate.removebutton.text=Remover
-checkout.giftcertificate.with.autoreplenishment.warn=No puedes pagar un pedido de subscripción con un certificado de regalo. La única forma de pago es con Tarjeta de crédito. Remueve tu certificado de regalos o tu pedido no será autoabastecido.
+checkout.giftcertificate.with.autoreplenishment.warn=No puedes pagar un pedido de subscripción con un certificado de regalo. La única forma de pago es con Tarjeta de crédito. Remueve tu certificado de regalo o tu pedido no será autoabastecido.
 checkout.module.samples.title=Muestras
 checkout.samples.add.text=Agregar
 checkout.samples.loadmore.text=Mostrar {0} más
 checkout.samples.remove.text=Remover
 checkout.samples.selected={0} de {1} muestras gratis seleccionada
-checkout.samples.select.label=Categoria
+checkout.samples.select.label=Categoría
 checkout.samples.categoryall.text=Todo ({0})
 checkout.samples.selectcategory.text=Seleccionar grupo
 checkout.samples.shopmore=Comprar para {0} más y recibir muestras gratis!
@@ -217,12 +217,12 @@ checkout.billingaddress.selectaddress.option={0} - {1}, {2}, {3}, {4}
 checkout.module.shippingmethod.title=Selecciona tu preferencia de envío
 checkout.module.shippingmethodcomplete.title=Método de envío
 checkout.module.shippingmethod.notallowed=Este Método de envío no esta permitido para la actual dirección.
-checkout.module.shippingmethod.hazmatmessage=Debido a regulaciones de seguridad aerea,no podemos enviar pedidos que contengan materiales peligrosos(aerosoles-alcohol) a través del servicio expres o prioritario. Estos pedidos se enviarán a través del servicio Expedited Parcel. Ten en cuenta que algunas áreas remotas sólo pueden ser entregadas por vía aérea. Para estas regiones, lamentablemente no podremos enviar pedidos que contengan materiales peligrosos (aerosoles-alcohol). Gracias por tu comprensión.
+checkout.module.shippingmethod.hazmatmessage=Debido a regulaciones de seguridad aérea,no podemos enviar pedidos que contengan materiales peligrosos(aerosoles-alcohol) a través del servicio exprés o prioritario. Estos pedidos se enviarán a través del servicio Expedited Parcel. Ten en cuenta que algunas áreas remotas sólo pueden ser entregadas por vía aérea. Para estas regiones, lamentablemente no podremos enviar pedidos que contengan materiales peligrosos (aerosoles-alcohol). Gracias por tu comprensión.
 checkout.module.shippingmethod.subtitle=
 checkout.module.continueshopping=Continuar comprando
 checkout.module.paymentmethod.title=Selecciona tu método de pago
 checkout.module.paymentmethodcomplete.title=Método de pago seleccionado
-checkout.module.paymentmethod.nobalance=EL total de tu pedido ha sido cambiado. POr favor solicita nuevamente un certificado de regalo o utiliza un método de pago adicional para cubrir completamente el total del pedido.
+checkout.module.paymentmethod.nobalance=EL total de tu pedido ha sido cambiado. Por favor solicita nuevamente un certificado de regalo o utiliza un método de pago adicional para cubrir completamente el total del pedido.
 checkout.module.paymentmethod.cvn.error=Código de seguridad incorrecto
 checkout.module.paymentmethod.expirationdate.error=Fecha de caducidad equivocada
 checkout.module.paymentmethod.invalidcardnumber.error=Número de tarjeta de crédito equivocado
@@ -230,7 +230,7 @@ checkout.module.paymentmethod.invalidpaymentmethod=Detalle de método de pago In
 checkout.module.paymentmethod.replacebutton.html.credit_card=<span>REVISAR PEDIDO</span>
 checkout.module.paymentmethod.replacebutton.html.paypal=<img src="{0}" alt="" />
 checkout.module.paymentmethod.replacebutton.imagepath.paypal=/images/paypal_express.png
-paymentmethod.creditcard.title=Elije una tarjeta de crédito
+paymentmethod.creditcard.title=Elige una tarjeta de crédito
 billing.selectcreditcard.option=({0}) {1} - {3,number,00}.{4,number,0000}
 paymentmethod.mandatory.text=
 paymentmethod.creditcard.expiration={0,number,00}/{2}
@@ -252,13 +252,13 @@ confirmationpage.billingaddress.title=Dirección de facturación
 confirmationpage.paymentmethod.title=Método de pago {0,choice,1#|1<s}
 confirmationpage.paymentmethod.subtitle=
 confirmationpage.couponcode.title=Código promocional
-confirmationpage.couponcode.code=Code: {0}
+confirmationpage.couponcode.code=Código: {0}
 confirmationpage.couponcode.amount=Cantidad:
 confirmationpage.ordersummary.subtitle=
 confirmationpage.ordersummary.print=
 confirmationpage.order.history=Historial de pedidos
 addresssugestion.werecommend.button=Sí, por favor, utiliza esta dirección
-addresssugestion.youentered.button=No, guarda esta dirección 
+addresssugestion.youentered.button=No, guarda ésta dirección 
 addresssugestion.cancel.button=Cerrar
 checkout.label.shippingmethod=
 checkout.targetSR=
@@ -272,7 +272,7 @@ checkout.productleveldiscount.unadjsusted.customformat=
 cart.notifications.numberoderlimitation=Lo sentimos, solo puedes pedir{0,number,integer} {0,choice,0#times|1#time|1<times} cada {1,number,integer} {1,choice,0#hours|1#hour|1<hours}
 cart.notifications.cartcontainsautereplenishment.unregistered=Tu carrito contiene uno o más productos de reabastecimiento automático. Favor de iniciar sesión o crear una cuenta para continuar con el proceso de pago.<b>Términos y condiciones del autobastecimiento</b>: Clicando en Pago," aceptas los <a class="dialogify" href=\"{0}\">términos y condiciones</a> del programa de autoabastecimiento.
 cart.notifications.cartcontainsautereplenishment.registered=Tu carrito contiene uno o más productos de reabastecimiento automático <b>Terminos y condiciones de Autoabastecimiento</b>: By clicking on "Checkout," you agree to the <a class="dialogify" href=\"{0}\">terms and conditions</a> for the Auto Replenishment Program.
-cart.notifications.invalidstore=En este momento, no se puede pedir su carrito de compra porque uno o más de los productos de su carrito no están disponibles en  {0}. Por favor elimine el producto no disponible para recoger su pedido {0}, Seleccione un lugar de recogida diferente o envíe su pedido. Si tienes alguna pregunta, favor de contactar a atención al cliente en el 1&#8209;800&#8209;543&#8209;4572.
+cart.notifications.invalidstore=En este momento, no se puede pedir tu carrito de compras porque uno o más de los productos de tu carrito no están disponibles en  {0}. Por favor elimina el producto no disponible para recoger tu pedido {0}, Selecciona un lugar de recogida diferente o envía tu pedido. Si tienes alguna pregunta, favor de contactar a atención al cliente en el 1&#8209;800&#8209;543&#8209;4572.
 cart.notifications.invalidproductavailabilityinstore={0} no está disponible en {1}.
 cart.notifications.invalidproductsavailabilityinstore={0} no están disponibles en {1}.
 cart.notifications.addprofessionalproducterror=Tienes un producto profesional en tu carrito de compras y no puede ser combinado con ningún otro producto.
@@ -283,7 +283,7 @@ orderreview.trackingdeliverydate=Fecha estimada de envío:
 orderreview.trackingstatus=Estatus:
 cybersource.error.msg.150=Error en el sistema, por favor espera unos minutos e intenta nuevamente.
 cybersource.error.msg.151=Error en el sistema, por favor espera unos minutos e intenta nuevamente.
-cybersource.error.msg.152=SError en el sistema, por favor espera unos minutos e intenta nuevamente.
+cybersource.error.msg.152=Error en el sistema, por favor espera unos minutos e intenta nuevamente.
 cybersource.error.msg.999=Error en el sistema, por favor espera unos minutos e intenta nuevamente.
 cybersource.error.msg.202=Tu tarjeta de crédito ha expirado. Puedes re ingresar tus datos utilizando una tarjeta de crédito diferente y volver a enviarla.
 cybersource.error.msg.203=Tu banco rechazó la transacción. Puedes re ingresar tus datos utilizando otra tarjeta de crédito y volver a enviarla.
@@ -313,13 +313,13 @@ cybersource.error.msg.247=El emisor de tu tarjeta de crédito ha rechazado la tr
 cybersource.error.msg.254=El emisor de tu tarjeta de crédito ha rechazado la transacción. Comprueba que los datos introducidos sean correctos. Si encuentras algún error, rectifícalos y vuelve a enviarlo.
 cybersource.error.msg.201=Favor de llamar a tu banco emisor de la tarjeta de crédito para continuar con la solicitud. Puedes volver a introducir los datos de tu tarjeta de crédito utilizando una tarjeta de crédito alternativa.
 cybersource.error.msg.200=La tarjeta de crédito no pasó el chequeo de verificación de dirección. Comprueba los datos de tu dirección y vuelve a enviarlos.
-cybersource.error.msg.230=La tarjeta de crédito no pasó la verificación del número de verificación de la tarjeta. Verifica tu número de verificación de la tarjeta de crédito.
-cybersource.error.msg.481=La tarjeta de crédito fue rechazada debido a un problema con la tarjeta. Verifique su número de verificación de tarjeta de crédito o ponte en contacto con el servicio de atención al cliente para obtener más ayuda (DM).
-cybersource.error.msg.100=TLa transacción fué exitosa.
+cybersource.error.msg.230=La tarjeta de crédito no pasó la revisión del número de verificación de la tarjeta. Verifica tu número de verificación de la tarjeta de crédito.
+cybersource.error.msg.481=La tarjeta de crédito fue rechazada debido a un problema con la tarjeta. Revisa tu número de verificación de tarjeta de crédito o ponte en contacto con el servicio de atención al cliente para obtener más ayuda (DM).
+cybersource.error.msg.100=La transacción fué exitosa.
 cybersource.error.msg.480=La transacción se ha marcado para REVISIÓN.
 cybersource.error.msg.450=Número de apartamento ausente o no encontrado.
 cybersource.error.msg.451=Información de dirección insuficiente.
-cybersource.error.msg.452=Número de casa/casilla o no encontrada en la casa.
+cybersource.error.msg.452=Número de casa/casilla no encontrada en la casa.
 cybersource.error.msg.453=Se encontraron múltiples coincidencias de direcciones.
 cybersource.error.msg.454=CORREOS. Identificador de casillas no encontrado o fuera de rango.
 cybersource.error.msg.455=Identificador de servicio de ruta no encontrado o fuera de rango.
@@ -360,7 +360,7 @@ checkout.cartabandoned.regeneration.error.not_available=No hay cantidad disponib
 checkout.cartabandoned.regeneration.title=Su carro abandonado fue regenerado
 checkout.cartabandoned.regeneration.table.result=Resultado
 checkout.cartabandoned.regeneration.table.name=Nombre / ID
-checkout.cartabandoned.regeneration.table.qty=Qty
+checkout.cartabandoned.regeneration.table.qty=Cant.
 cart.customgift.quantity.label=
 personal.engraving.messages=Grabado personalizado:
 pickupinstore.text=Recoger en la tienda
