--- a/TraduccionLacome/lancome_v3_resources_to_translate ES/product_es.properties
+++ b/TraduccionLacome/lancome_v3_resources_to_translate ES/product_es.properties
@@ -2,7 +2,7 @@ product.quickview.moredetails=MAS DETALLES >
 product.section.differencefragrance=lo que hace la diferencia
 product.shades.less.shades=Menos tonalidades
 product.shades.more.shades=Más tonalidades
-product.addedtocart.promotion.label=You get free shipping and gift prestige Obtienes envío gratis y obsequio de prestigio
+product.addedtocart.promotion.label=Obtienes envío gratis y obsequio de prestigio
 product.price.label.size=({0}/fl.oz.)
 displayproductavailability.outofstocknotification.cta=Agotado
 product.thumbnails.label.video=Descubre el video
@@ -17,8 +17,8 @@ turnto.question = Pregunta
 turnto.questions = Preguntas
 turnto.see = Ver
 product.reviews.star.rating=({0})
-add.personal.engraving.sublabel=Actualiza a un tamaño de 2.3 oz o superior y reciba un grabado personalizado y gratuito
-personal.engraving.sublabel.sizevariant=Actualiza a un tamaño de 2.3 oz o superior y reciba un grabado personalizado y gratuito
+add.personal.engraving.sublabel=Actualiza a un tamaño de 2.3 oz o superior y recibe un grabado personalizado y gratuito
+personal.engraving.sublabel.sizevariant=Actualiza a un tamaño de 2.3 oz o superior y recibe un grabado personalizado y gratuito
 personal.engraving.sublabel.othervariant=Añade un mensaje o un monograma personalizado a tu maquillaje. Por tiempo limitado.
 presonal.engraving.message.inappropriate=Este mensaje puede contener lenguaje inadecuado o caracteres no válidos. Por favor llame al 1-888-525-2747
 personal.engraving.title=Hazlo personal
@@ -33,7 +33,7 @@ personal.engraving.engravingselectanotherproduct=Elegir otro producto
 personal.engraving.step13=Paso <span>1</span>/3
 personal.engraving.productyouwant=Selecciona tu producto
 personal.engraving.productyouwantmobile=Seleccionar
-personal.engraving.toengrave=Para gravar
+personal.engraving.toengrave=Para grabar
 product.sticky.addtocart=Agregar al carrito de compras
 product.sticky.qty=QTY.
 product.sticky.notifyme=Notificame
@@ -63,10 +63,10 @@ product.availability.IN_STOCK=en existencia
 product.availability.PREORDER=Reservar
 product.availability.BACKORDER=Disponible para pedido
 product.availability.NOT_AVAILABLE=Fuera de stock
-add.personal.engraving.label=Gravado gratuito
-add.personal.engraving.label.checked=Gravado agregado
+add.personal.engraving.label=Grabado gratuito
+add.personal.engraving.label.checked=Grabado agregado
 add.personal.engraving.gotocart.comment=El grabado no se puede añadir al producto en la lista de deseos. Serás redirigido al carrito de compras después de agregarlo.
-add.personal.engraving.label.checked.comment=Introduce tus mensajes una vez añadido este producto a su bolsa de compras.
+add.personal.engraving.label.checked.comment=Introduce tus mensajes una vez añadido este producto a tu carrito de compras.
 add.personal.engraving.label.checked.commentdisclaimer=Una vez hecho, tu pedido no puede ser devuelto, excepto cuando exista algun defecto.
 personal.engraving.missingmessage=Por favor, añade tu mensaje grabado.
 personal.engraving.page.title=Grabado Personal gratis
@@ -112,7 +112,7 @@ pickupinstore.text.specific=Retirarlo en {0} tienda.
 pickupinstore.chosen.storepickup=*Haz elegido recoger el artículo en la tienda. Si te gustaría enviar artículos a tu casa, debes crear un pedido separado o modificar el pedido completo.
 pickupinstore.note=*Nota:
 pickupinstore.samplesremovalnote=*Ten en cuenta que: quitaremos muestras de tu bolsa de compras si eliges recoger tus artículos en la tienda. Podrás elegir tus muestras de cortesía en la tienda cuando recojas tu pedido. Si haz solicitado una promoción a tu pedido, deberás volver a introducir tu código de promoción.
-pickupinstore.cantcombine=Desafortunadamente, no podemos combinar pedido de retiro en tienda con productos de reposición dentro del mismo carrito de compras. Elimine los elementos de reposición de su carrito
+pickupinstore.cantcombine=Desafortunadamente, no podemos combinar pedido de retiro en tienda con productos de reposición dentro del mismo carrito de compras. Elimina los elementos de reposición de tu carrito
 pickupinstore.confirm.message=La modificación de tu pedido eliminará la tienda de retiro seleccionada así como cualquier promoción. Vuelve a introducir tu código para canjear una promoción.
 pickupinstore.pilot.pdp=El retiro en tienda está actualmente disponible en tiendas limitadas.
 pickupinstore.pilot.cart=*El retiro en tienda está actualmente disponible solo en tiendas limitadas.
