--- a/TraduccionLacome/lancome_v3_resources_to_translate ES/productfinder_es.properties
+++ b/TraduccionLacome/lancome_v3_resources_to_translate ES/productfinder_es.properties
@@ -1,4 +1,4 @@
-breadcrumb.consultation.title=Consultorias
+breadcrumb.consultation.title=Consultorías
 breadcrumb.consultation.SKIN-BEAUTY-FINDER=Consulta de belleza de la piel
 breadcrumb.consultation.MASCARA-FINDER=Consulta de rímel
 breadcrumb.consultation.COMPLEXION-FINDER=Consulta de Tez
