--- a/TraduccionLacome/lancome_v3_resources_to_translate ES/ratingsandreviews_es.properties
+++ b/TraduccionLacome/lancome_v3_resources_to_translate ES/ratingsandreviews_es.properties
@@ -30,7 +30,7 @@ rr.reviewcount.title={0,number,integer} {0,choice,1#review|1<reviews}
 rr.product.submitTimeFormat=yyyy-MM-dd HH:mm:ss
 rr.product.submitTimeBaseFormat=yyyy-MM-dd HH:mm:ss
 rr.product.reviewedBy=
-rr.product.acceptuseragreement.cid=terminos
+rr.product.acceptuseragreement.cid=términos
 rr.false=No
 rr.true=Sí
 rr.product.login=Iniciar sesión
