--- a/TraduccionLacome/lancome_v3_resources_to_translate ES/search_es.properties
+++ b/TraduccionLacome/lancome_v3_resources_to_translate ES/search_es.properties
@@ -1,7 +1,7 @@
 simplesearch.footer.placeholder=Tu búsqueda
 suggestions.noresultstitle=No hay sugerencias
 suggestions.noresults=Si tu búsqueda no obtuvo resultados, revisa los términos de búsqueda para faltas de ortografía.
-nohits.didyoumean = Quisite decir
+nohits.didyoumean = Quisiste decir
 nohits.header = Sin resultados
 searchrefinebar.back=Atrás
 searchrefinebar.modal.title=Definir
