--- a/TraduccionLacome/lancome_v3_resources_to_translate ES/webpay_es.properties
+++ b/TraduccionLacome/lancome_v3_resources_to_translate ES/webpay_es.properties
@@ -1,12 +1,12 @@
-reasoncodeerror=Transbank rechazo el pago. Por favor reintentar nuevamente.
+reasoncodeerror=Transbank rechazó el pago. Por favor reintenta nuevamente.
 transactionapproved=Transacción aprobada.
-generalerror=Estimado cliente no podemos procesar la transacción en este momento. Por favor reintentar nuevamente.
+generalerror=Estimado cliente no podemos procesar la transacción en este momento. Por favor reintenta nuevamente.
 duplicateordererror=No es posible procesar una transacción de pago para esta orden. Comunicarse con servicio al cliente.
 vcierror.tsy=Autenticación exitosa.
 vcierror.tsn=Autenticación exitosa.
 vcierror.to=Tiempo máximo excedido para autenticación.
 vcierror.abo=Autenticación abortada por tarjetahabiente.
-vcierror.u3=Error interno en la autenticación. Puede ser vacío si la transacción no se autentico.
+vcierror.u3=Error interno en la autenticación. Puede ser vacío si la transacción no se autenticó.
 cancelmessage=Transacción de pago no pudo ser procesada.
 reasponcode.error1=Rechazo de transacción.
 reasponcode.error2=Transacción debe reintentarse.
@@ -17,7 +17,7 @@ reasponcode.error6=Excede cupo máximo mensual.
 reasponcode.error7=Excede límite diario por transacción.
 reasponcode.error8=Rubro no autorizado.
 error.orderNo=Orden de Compra
-response.reason.message=Las posibles causas de este rechazo son:<ul><li>error en el ingreso de los datos de su tarjeta (fecha y/o código de seguridad).</li><li>su tarjeta no cuenta con saldo suficiente.</li><li>tarjeta aún no habilita en el sistema financiero.</li></ul>
+response.reason.message=Las posibles causas de este rechazo son:<ul><li>error en el ingreso de los datos de tu tarjeta (fecha y/o código de seguridad).</li><li>tu tarjeta no cuenta con saldo suficiente.</li><li>tarjeta aún no habilita en el sistema financiero.</li></ul>
 payment.cardnumber=Número de tarjeta :
 payment.autorizationcode=Código de autorización :
 payment.transactiondate=Fecha de la transacción :
