Traducción archivos para Lancome

--- a/TraduccionLacome/lancome_v3_resources_to_translate ES/components_es.properties
+++ b/TraduccionLacome/lancome_v3_resources_to_translate ES/components_es.properties
@@ -3,11 +3,11 @@ header.title.advantage=¿Por qué comprar en Línea?
 email.remindme.subject=Hacer {0} sonreir
 ordersummary.ordershippingforfree=-
 ordersummary.ordershippingtohome=Envíos
-socialshare.instagram.title=Sigenos en Instagram
+socialshare.instagram.title=Sígenos en Instagram
 languageswitcher.selected.attribute=seleccionado
 languageswitcher.prefix.fr=FR
 languageswitcher.prefix.en=IN
-topslot.maison.lancome=casa lancôme
+topslot.maison.lancome=casa Lancôme
 topslot.shop.online= por que comprar en línea?
 ordersummary.ordershippingforfree=GRATIShttps.not.supported=IMPORTANTE: Estás usando un navegador obsoleto. Como medida de seguridad y protección a tus datos, no podrás realizar el pago usando este navegador. Por favor utiliza otro navegador o actualiza tu navegador para podr continuar. <a href="{0}">Read more.</a>
 orderdetails.tracking.details=Detalles de Rastreo
